// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`push-handler creates an issue 1`] = `
Array [
  Object {
    "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L11

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
    "labels": Array [
      "todo",
    ],
    "owner": "JasonEtco",
    "repo": "tests",
    "title": "I am an example title",
  },
]
`;

exports[`push-handler creates an issue and assigns the configured user 1`] = `
Array [
  Object {
    "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L11

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been automagically assigned to @matchai.",
    "labels": Array [
      "todo",
    ],
    "owner": "JasonEtco",
    "repo": "tests",
    "title": "I am an example title",
  },
]
`;

exports[`push-handler creates an issue and assigns the configured users 1`] = `
Array [
  Object {
    "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L11

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been automagically assigned to @JasonEtco, @matchai and @defunkt.",
    "labels": Array [
      "todo",
    ],
    "owner": "JasonEtco",
    "repo": "tests",
    "title": "I am an example title",
  },
]
`;

exports[`push-handler creates an issue with a truncated title 1`] = `
Array [
  Object {
    "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L11

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af. It&#x27;s been assigned to @JasonEtco because they committed the code.",
    "labels": Array [
      "todo",
    ],
    "owner": "JasonEtco",
    "repo": "tests",
    "title": "This is a really, really, really, really, really, really, really, really, really...",
  },
]
`;

exports[`push-handler creates an issue without assigning anyone 1`] = `
Array [
  Object {
    "body": "https://github.com/JasonEtco/tests/blob/e06c237a0c041f5a0a61f1c361f7a1d6f3d669af/.travis.yml#L11

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in e06c237a0c041f5a0a61f1c361f7a1d6f3d669af.",
    "labels": Array [
      "todo",
    ],
    "owner": "JasonEtco",
    "repo": "tests",
    "title": "I am an example title",
  },
]
`;
